--- a/.github/workflows/StudentRegistry.yml
+++ b/.github/workflows/StudentRegistry.yml
@@ -32,8 +32,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Start the application
-        run: npm start
+      - name: Start server in background
+        run: npm start &
+
+      - name: Wait for server to be ready
+        run: sleep 5
 
       - name: Run tests
         run: npm test
