--- a/.github/workflows/StudentRegistry.yml
+++ b/.github/workflows/StudentRegistry.yml
@@ -39,4 +39,4 @@ jobs:
         run: sleep 5
 
       - name: Run tests
-        run: run: npx mocha 'tests/*.mjs'
+        run: npx mocha 'tests/*.mjs'
