--- a/.github/workflows/StudentRegistry.yml
+++ b/.github/workflows/StudentRegistry.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Fix permissions for mocha
+        run: chmod +x ./node_modules/.bin/mocha
+  
       - name: Start server in background
         run: npm start &
 
